objects/vlocity_cmt__VlocitySystemLog__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LogData__c</fullName>
        <label>Log Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LogMessage__c</fullName>
        <label>Log Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Diagnostic</fullName>
                </value>
                <value>
                    <fullName>System Maintenance</fullName>
                </value>
                <value>
                    <fullName>System Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessName__c</fullName>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessStatus__c</fullName>
        <label>Process Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Severity__c</fullName>
        <label>Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimeStamp__c</fullName>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VlocitySystemLog</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vlocity System Log</label>
    <nameField>
        <label>Vlocity System Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity System Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>